# so_rest

./: docker-compose.yml  pyproject.toml  requirements.txt  tasks.py
app/: client_secret.json
app/app/: settings.py  urls.py
app/core/: admin.py  auth_backend.py  authentication.py  models.py
app/core/management/commands/: refresh_achievements.py  send_notifcations.py
app/core/migrations/: 0030_achievement_description.py  0031_auto_20210721_1231.py  0032_auto_20210721_1424.py  0033_user_telegram_id.py  0034_auto_20210726_0025.py  0035_auto_20210728_1948.py  0036_auto_20210728_1949.py  0037_auto_20210728_1951.py  0038_auto_20210728_1954.py  0039_auto_20210728_1956.py  0040_auto_20210728_2000.py  0041_event_state.py  0042_auto_20210801_0024.py  0043_auto_20210801_1333.py  0044_auto_20210801_1355.py  0045_auto_20210815_1152.py  0046_auto_20210815_1308.py  0047_auto_20210815_1314.py  0048_voteanswer_votequestion_voting.py
app/core/tests/: test_admin.py  test_models.py
app/event/: serializers.py  urls.py  views.py
app/event/tests/: test_event_api.py
app/so/: serializers.py  urls.py  views.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
app/voting/: serializers.py  urls.py  views.py
docs/: event_states.puml
