[tool.poetry]
name = "so_rest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = ">=3.1.5,<3.2.0"
djangorestframework = ">=3.12.2,<3.13.0"
django-rest-swagger = "2.2.0"
django-cors-headers = ">=3.7.0,<3.8.0"
django-reversion = ">=3.0.9,<3.1.0"
django-reversion-compare = ">=0.14.0,<1.0.0"
drf-yasg = "1.20.0"
drf-nested-routers = "0.93.3"
django-admin-list-filter-dropdown = "1.0.3"
pygsheets = "2.0.5"
psycopg2-binary = ">=2.8.6,<2.9.0"
pydevd-pycharm = "~=193.6911.25"
Pillow = "8.2.0"
mysqlclient = "^2.0.3"
djangorestframework-camel-case = "^1.2.0"

[tool.poetry.dev-dependencies]
flake8 = ">=3.8.4,<3.9.0"
nox = "^2021.6.12"
black = "^21.6b0"
flake8-black = "^0.2.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
isort = "^5.8.0"
mypy = "^0.902"
pytype = {version = "^2021.6.17", python = "3.7"}
flake8-comprehensions = "^3.5.0"
flake8-builtins = "^1.5.3"
flake8-django = "^1.1.2"
flake8-simplify = "^0.14.1"
flake8-cognitive-complexity = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
